# risc0-playground

methods/: build.rs
methods/guest/: Cargo.toml
project_or_component_name/src/: main.rs
