[package]
name = "methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
risc0-build = "0.11"

[dependencies]
risc0-zkvm-guest = "0.11"
externc-libm = { git = "https://github.com/HaruxOS/externc-libm" }
dssim-core = { version = "3.2", default-features = false }
png-decoder = "0.1.1"
imgref = "1.9.4"
rgb = "0.8"