[package]
name = "methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
risc0-build = "0.11"

[dependencies]
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-serialize = "0.3.0"
ark-std = "0.3.0"
ark-bls12-381 = "0.3.0"
getrandom = {version = "0.2", features = ["custom"] }
bloomfilter = "1.0.9"
risc0-zkvm-guest = "0.11"
externc-libm = { git = "https://github.com/HaruxOS/externc-libm" }
png-decoder = "0.1.1"
rgb = "0.8"